fix(styles): .product-preview-card__cta, align to the center

--- a/styles.css
+++ b/styles.css
@@ -103,6 +103,12 @@ picture > img {
 	height: 3rem;
 	border-radius: 0.5625rem;
 	font-size: 0.875rem;
+	font-weight: 500;
+	letter-spacing: 0.03125rem;
+	display: flex;
+  align-items: center;
+  gap: 0.625rem;
+  padding-left: 6rem;
 }
 
 .product-preview-card__cta:hover {
